update the android app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:text="A"
+        android:text="@string/A"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
 
 
-        android:text="B"
+        android:text="@string/B"
         app:layout_constraintEnd_toStartOf="@+id/btnC"
         app:layout_constraintStart_toEndOf="@+id/btnA"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,7 +31,7 @@
         android:id="@+id/btnC"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="C"
+        android:text="@string/C"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="20dp"
-        android:text="D"
+        android:text="@string/D"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnA" />
 
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="E"
+        android:text="@string/E"
         app:layout_constraintEnd_toStartOf="@+id/btnF"
         app:layout_constraintStart_toEndOf="@+id/btnD"
         app:layout_constraintTop_toBottomOf="@+id/btnB" />
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="F"
+        android:text="@string/F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnC" />
 
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="20dp"
-        android:text="G"
+        android:text="@string/G"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnD" />
 
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="H"
+        android:text="@string/H"
         app:layout_constraintEnd_toStartOf="@+id/btnI"
         app:layout_constraintStart_toEndOf="@+id/btnG"
         app:layout_constraintTop_toBottomOf="@+id/btnE" />
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="I"
+        android:text="@string/I"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnF" />
 
@@ -99,7 +99,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="20dp"
-        android:text="J"
+        android:text="@string/J"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnG" />
 
@@ -108,7 +108,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="K"
+        android:text="@string/K"
         app:layout_constraintEnd_toStartOf="@+id/btnL"
         app:layout_constraintStart_toEndOf="@+id/btnJ"
         app:layout_constraintTop_toBottomOf="@+id/btnH" />
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="L"
+        android:text="@string/L"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnI" />
 
@@ -128,7 +128,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="20dp"
-        android:text="M"
+        android:text="@string/M"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnJ" />
 
@@ -137,7 +137,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="N"
+        android:text="@string/N"
         app:layout_constraintEnd_toStartOf="@+id/btnO"
         app:layout_constraintStart_toEndOf="@+id/btnM"
         app:layout_constraintTop_toBottomOf="@+id/btnK" />
@@ -147,7 +147,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="O"
+        android:text="@string/O"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnL" />
 
@@ -157,7 +157,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="20dp"
-        android:text="P"
+        android:text="@string/P"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnM" />
 
@@ -166,7 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Q"
+        android:text="@string/Q"
         app:layout_constraintEnd_toStartOf="@+id/btnR"
         app:layout_constraintStart_toEndOf="@+id/btnP"
         app:layout_constraintTop_toBottomOf="@+id/btnN" />
@@ -176,7 +176,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="R"
+        android:text="@string/R"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnO" />
 
@@ -186,7 +186,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="20dp"
-        android:text="S"
+        android:text="@string/S"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnP" />
 
@@ -195,7 +195,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="T"
+        android:text="@string/T"
         app:layout_constraintEnd_toStartOf="@+id/btnU"
         app:layout_constraintStart_toEndOf="@+id/btnS"
         app:layout_constraintTop_toBottomOf="@+id/btnQ" />
@@ -205,7 +205,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="U"
+        android:text="@string/U"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnR" />
 
@@ -215,7 +215,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="20dp"
-        android:text="V"
+        android:text="@string/V"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnS" />
 
@@ -224,7 +224,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="W"
+        android:text="@string/W"
         app:layout_constraintEnd_toStartOf="@+id/btnX"
         app:layout_constraintStart_toEndOf="@+id/btnV"
         app:layout_constraintTop_toBottomOf="@+id/btnU" />
@@ -234,7 +234,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="X"
+        android:text="@string/X"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnU" />
 
@@ -244,7 +244,7 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="20dp"
-        android:text="Y"
+        android:text="@string/Y"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnV" />
 
@@ -253,7 +253,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Z"
+        android:text="@string/Z"
         app:layout_constraintEnd_toStartOf="@+id/btnX"
         app:layout_constraintStart_toEndOf="@+id/btnY"
         app:layout_constraintTop_toBottomOf="@+id/btnW" />
